--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </label>
 
       <div class="trigger">
-        <a class="page-link" href="https://alexeyignatiev.github.io/">about</a>
-        <a class="page-link" href="https://alexeyignatiev.github.io/publications/">publications</a>
-        <a class="page-link" href="https://alexeyignatiev.github.io/software/">software</a>
-        <a class="page-link" href="https://alexeyignatiev.github.io/assets/pdf/cv.pdf">curriculum vitae</a>
+        <a class="page-link" href="https://olegzaikin.github.io/">about</a>
+        <a class="page-link" href="https://olegzaikin.github.io/publications/">publications</a>
+        <a class="page-link" href="https://olegzaikin.github.io/software/">software</a>
+        <a class="page-link" href="https://olegzaikin.github.io/assets/Oleg_Zaikin_CV.pdf">curriculum vitae</a>
       </div>
     </nav>
     
