--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a class="page-link" href="https://olegzaikin.github.io/">about</a>
         <a class="page-link" href="https://olegzaikin.github.io/publications/">publications</a>
         <a class="page-link" href="https://olegzaikin.github.io/software/">software</a>
-        <a class="page-link" href="https://olegzaikin.github.io/assets/Oleg_Zaikin_CV.pdf">curriculum vitae</a>
+        <a class="page-link" href="https://github.com/olegzaikin/olegzaikin.github.io/blob/main/assets/Oleg_Zaikin_CV.pdf">curriculum vitae</a>
       </div>
     </nav>
     
