--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ I am a Research Assistant at the <a href="https://www.swansea.ac.uk/compsci/">Co
 
 <p class="justified">
 Previously, I was a leading researcher at <a href="http://idstu.irk.ru/en/about">Matrosov Institute for System Dynamics and Control Theory</a>,
-  a research institute of the Russian Academy of Sciences, working on solving hard cryptographic via SAT.
+  a research institute of the Russian Academy of Sciences, working on SAT-based cryptanalysis.
 </p>
 
 <p class="justified">
