Link to ResearchGate profile.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ solving hard combinatorial problems.
   <br>
   <a class="page-link" href="https://www.scopus.com/authid/detail.uri?authorId=56786079600">Scopus</a>
   <br>
+  <a class="page-link" href="https://www.researchgate.net/profile/Oleg-Zaikin-3">ResearchGate</a>
+  <br>
   <a class="page-link" href="https://github.com/olegzaikin">GitHub</a>
 </div>
 
