--- a/publications/index.html
+++ b/publications/index.html
@@ -46,6 +46,24 @@
 
   <article class="post-content publications clearfix">
 
+  <h3 class="year">2022</h3>
+  <ol class="bibliography"><li>
+  
+  <div id="z_ijcai22">
+      <span class="title">Inverting 43-step MD4 via Cube-and-Conquer.</span>
+      <span class="author">
+        Oleg Zaikin.
+      </span>
+          <span class="periodical">
+            <i>
+            IJCAI-ECAI 2022.
+            </i>
+          </span>
+  </div>
+  </li>
+  
+  </ol>
+
   <h3 class="year">2021</h3>
   <ol class="bibliography"><li>
   
