IJCAI preprint, updated CV.

--- a/publications/index.html
+++ b/publications/index.html
@@ -59,6 +59,10 @@
             IJCAI-ECAI 2022.
             </i>
           </span>
+    <span class="links">
+      [<a href="https://ijcai-22.org/main-track-accepted-papers/" target="_blank">HTML</a>]
+      [<a href="https://olegzaikin.github.io/publications/z-ijcai22-preprint.pdf" target="_blank">PDF</a>]
+    </span>
   </div>
   </li>
   
