--- a/publications/index.html
+++ b/publications/index.html
@@ -191,7 +191,7 @@
 <div id="kz-sat18">
   <span class="title">ALIAS: a modular tool for finding backdoors for SAT.</span>
   <span class="author">
-    Stepank Kochemazov
+    Stepan Kochemazov
     and <em>O. Zaikin</em>
   </span>
       <span class="periodical">
