--- a/publications/index.html
+++ b/publications/index.html
@@ -182,7 +182,7 @@
       </i>
     </span>
     <span class="links">
-      [<a href="https://lmcs.episciences.org/6177/pdf" target="_blank">HTML</a>]
+      [<a href="https://lmcs.episciences.org/6177" target="_blank">HTML</a>]
       [<a href="https://olegzaikin.github.io/publications/2020-sogzk-lmcs-preprint.pdf" target="_blank">PDF</a>]
     </span>
   </div>
