Added ISC paper.

--- a/publications/index.html
+++ b/publications/index.html
@@ -263,6 +263,31 @@
   </li>
 </ol>
 
+<h3 class="year">2017</h3>
+  <ol class="bibliography">
+
+  <li>
+  <div id="zk_isc17">
+    <span class="title">
+      An Improved SAT-Based Guess-and-Determine Attack on the Alternating Step Generator.
+    </span>
+    <span class="author">
+      <em>O. Zaikin</em>
+      and Stepan Kochemazov.
+    </span>
+    <span class="periodical">
+      <i>
+        ISC 2017
+      </i>
+    </span>
+    <span class="links">
+      [<a href="https://link.springer.com/chapter/10.1007/978-3-319-69659-1_2" target="_blank">HTML</a>]
+      [<a href="https://olegzaikin.github.io/publications/2017-zk-isc-preprint.pdf" target="_blank">PDF</a>]
+    </span>
+  </div>
+  </li>
+</ol>
+
 </body>
 
 </html>
