--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   <h2>News</h2>
   <table>
     <tr>
-      <td width="150">20 April 2022</th>
-      <td>My paper <em>“Inverting 43-step MD4 via Cube-and-Conquer”</em> is accepted at <a href="https://ijcai-22.org/"><strong>IJCAI-ECAI 2022</strong></a>!</td>
+      <td width="150", valign="top">20 April 2022</th>
+      <td valign="top">My paper <em>“Inverting 43-step MD4 via Cube-and-Conquer”</em> is accepted at <a href="https://ijcai-22.org/"><strong>IJCAI-ECAI 2022</strong></a>!</td>
     </tr>
   </table> 
 
