Added papers from 2016.

--- a/publications/index.html
+++ b/publications/index.html
@@ -50,7 +50,7 @@
   <li>
   <div id="z_ijcai22">
     <span class="title">
-      Inverting 43-step MD4 via Cube-and-Conquer.
+      Inverting 43-step MD4 via cube-and-conquer.
     </span>
     <span class="author">
       Oleg Zaikin.
@@ -123,7 +123,7 @@
   <li>
   <div id="zims-ecai20">
     <span class="title">
-      Branch Location Problems with Maximum Satisfiability.
+      Branch location problems with Maximum Satisfiability.
     </span>
     <span class="author">
       <em>Oleg Zaikin</em>,
@@ -197,7 +197,7 @@
   <li>
   <div id="zk-oms19">
     <span class="title">
-      On black-box optimization in Divide-and-Conquer SAT solving.
+      On black-box optimization in divide-and-conquer SAT solving.
     </span>
     <span class="author">
       <em>Oleg Zaikin</em>
@@ -222,7 +222,7 @@
 
   <li>
   <div id="szoki-aaai18">
-    <span class="title">On Cryptographic Attacks Using Backdoors for SAT.</span>
+    <span class="title">On cryptographic attacks using backdoors for SAT.</span>
     <span class="author">
       Alexander Semenov,
       <em>Oleg Zaikin</em>,
@@ -265,12 +265,12 @@
 </ol>
 
 <h3 class="year">2017</h3>
-  <ol class="bibliography">
+<ol class="bibliography">
 
   <li>
   <div id="zk_isc17">
     <span class="title">
-      An Improved SAT-Based Guess-and-Determine Attack on the Alternating Step Generator.
+      An improved SAT-based guess-and-determine attack on the alternating step generator.
     </span>
     <span class="author">
       <em>O. Zaikin</em>
@@ -287,6 +287,56 @@
     </span>
   </div>
   </li>
+</ol>
+
+
+<h3 class="year">2016</h3>
+<ol class="bibliography">
+
+  <li>
+  <div id="sz_s+16">
+    <span class="title">
+      Algorithm for finding partitionings of hard variants of Boolean satisfiability problem with application to inversion of some cryptographic functions.
+    </span>
+    <span class="author">
+      Alexander Semenov
+      and <em>O. Zaikin</em>.
+    </span>
+    <span class="periodical">
+      <i>
+        SpringerPlus 2016
+      </i>
+    </span>
+    <span class="links">
+      [<a href="https://springerplus.springeropen.com/articles/10.1186/s40064-016-2187-4" target="_blank">HTML</a>]
+      [<a href="https://olegzaikin.github.io/publications/2016-sz-sp-preprint.pdf" target="_blank">PDF</a>]
+    </span>
+  </div>
+  </li>
+
+  <li>
+    <div id="sz_s+16">
+      <span class="title">
+        Encoding cryptographic functions to SAT using Transalg system.
+      </span>
+      <span class="author">
+        Ilya Otpuschennikov,
+        Alexander Semenov,
+        Irina Gribanova,
+        <em>O. Zaikin</em>,
+        and Stepan Kochemazov.
+      </span>
+      <span class="periodical">
+        <i>
+          ECAI 2016
+        </i>
+      </span>
+      <span class="links">
+        [<a href="https://dl.acm.org/doi/10.3233/978-1-61499-672-9-1594" target="_blank">HTML</a>]
+        [<a href="https://olegzaikin.github.io/publications/2016-osgzk-ecai-preprint.pdf" target="_blank">PDF</a>]
+      </span>
+    </div>
+    </li>
 </ol>
 
 </div>
