--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <table>
     <tr>
       <td width="150", valign="top">20 April 2022</th>
-      <td valign="top">My paper <em>“Inverting 43-step MD4 via Cube-and-Conquer”</em> is accepted at <a href="https://ijcai-22.org/"><strong>IJCAI-ECAI 2022</strong></a>!</td>
+      <td valign="top">My paper <em>“Inverting 43-step MD4 via cube-and-conquer”</em> is accepted at <a href="https://ijcai-22.org/"><strong>IJCAI-ECAI 2022</strong></a>!</td>
     </tr>
   </table> 
 
