--- a/publications/index.html
+++ b/publications/index.html
@@ -249,7 +249,7 @@
     </span>
     <span class="author">
       Stepan Kochemazov
-      and <em>O. Zaikin</em>.
+      and <em>Oleg Zaikin</em>.
     </span>
     <span class="periodical">
       <i>
@@ -273,7 +273,7 @@
       An improved SAT-based guess-and-determine attack on the alternating step generator.
     </span>
     <span class="author">
-      <em>O. Zaikin</em>
+      <em>Oleg Zaikin</em>
       and Stepan Kochemazov.
     </span>
     <span class="periodical">
@@ -300,7 +300,7 @@
     </span>
     <span class="author">
       Alexander Semenov
-      and <em>O. Zaikin</em>.
+      and <em>Oleg Zaikin</em>.
     </span>
     <span class="periodical">
       <i>
@@ -323,7 +323,7 @@
         Ilya Otpuschennikov,
         Alexander Semenov,
         Irina Gribanova,
-        <em>O. Zaikin</em>,
+        <em>Oleg Zaikin</em>,
         and Stepan Kochemazov.
       </span>
       <span class="periodical">
