Added papers for 2011-2015.

--- a/publications/index.html
+++ b/publications/index.html
@@ -315,28 +315,108 @@
   </li>
 
   <li>
-    <div id="sz_s+16">
-      <span class="title">
-        Encoding cryptographic functions to SAT using Transalg system.
-      </span>
-      <span class="author">
-        Ilya Otpuschennikov,
-        Alexander Semenov,
-        Irina Gribanova,
-        <em>Oleg Zaikin</em>,
-        and Stepan Kochemazov.
-      </span>
-      <span class="periodical">
-        <i>
-          ECAI 2016
-        </i>
-      </span>
-      <span class="links">
-        [<a href="https://dl.acm.org/doi/10.3233/978-1-61499-672-9-1594" target="_blank">HTML</a>]
-        [<a href="https://olegzaikin.github.io/publications/2016-osgzk-ecai-preprint.pdf" target="_blank">PDF</a>]
-      </span>
-    </div>
-    </li>
+  <div id="sz_s+16">
+    <span class="title">
+      Encoding cryptographic functions to SAT using Transalg system.
+    </span>
+    <span class="author">
+      Ilya Otpuschennikov,
+      Alexander Semenov,
+      Irina Gribanova,
+      <em>Oleg Zaikin</em>,
+      and Stepan Kochemazov.
+    </span>
+    <span class="periodical">
+      <i>
+        ECAI 2016
+      </i>
+    </span>
+    <span class="links">
+      [<a href="https://dl.acm.org/doi/10.3233/978-1-61499-672-9-1594" target="_blank">HTML</a>]
+      [<a href="https://olegzaikin.github.io/publications/2016-osgzk-ecai-preprint.pdf" target="_blank">PDF</a>]
+    </span>
+  </div>
+  </li>
+</ol>
+
+
+<h3 class="year">2015</h3>
+<ol class="bibliography">
+
+  <li>
+  <div id="sz_pact15">
+    <span class="title">
+      Using Monte Carlo method for searching partitionings of hard variants of Boolean satisfiability problem.
+    </span>
+    <span class="author">
+      Alexander Semenov
+      and <em>Oleg Zaikin</em>.
+    </span>
+    <span class="periodical">
+      <i>
+        Parallel Computing Technologies 2015
+      </i>
+    </span>
+    <span class="links">
+      [<a href="https://link.springer.com/chapter/10.1007/978-3-319-21909-7_21" target="_blank">HTML</a>]
+      [<a href="https://olegzaikin.github.io/publications/2015-sz-pact-preprint.pdf" target="_blank">PDF</a>]
+    </span>
+  </div>
+  </li>
+</ol>
+
+
+<h3 class="year">2012</h3>
+<ol class="bibliography">
+
+  <li>
+  <div id="psz_cs12">
+    <span class="title">
+      Using BOINC desktop grid to solve large scale SAT problems.
+    </span>
+    <span class="author">
+      Mikhail Posypkin,
+      Alexander Semenov,
+      and <em>Oleg Zaikin</em>.
+    </span>
+    <span class="periodical">
+      <i>
+        Computer Science
+      </i>
+    </span>
+    <span class="links">
+      [<a href="https://journals.agh.edu.pl/csci/article/download/37/30" target="_blank">HTML</a>]
+      [<a href="https://olegzaikin.github.io/publications/2012-psz-cs-preprint.pdf" target="_blank">PDF</a>]
+    </span>
+  </div>
+  </li>
+</ol>
+
+<h3 class="year">2011</h3>
+<ol class="bibliography">
+
+  <li>
+  <div id="pact_szbp11">
+    <span class="title">
+      Parallel Logical Cryptanalysis of the Generator A5/1 in BNB-Grid System.
+    </span>
+    <span class="author">
+      Alexander Semenov,
+      <em>Oleg Zaikin</em>,
+      Dmitry Bespalov,
+      and Mikhail Posypkin.
+    </span>
+    <span class="periodical">
+      <i>
+        Parallel Computing Technologies 2011
+      </i>
+    </span>
+    <span class="links">
+      [<a href="https://link.springer.com/chapter/10.1007/978-3-642-23178-0_43" target="_blank">HTML</a>]
+      [<a href="https://olegzaikin.github.io/publications/2011-szbp-pact-preprint.pdf" target="_blank">PDF</a>]
+    </span>
+  </div>
+  </li>
 </ol>
 
 </div>
