--- a/publications/index.html
+++ b/publications/index.html
@@ -398,7 +398,7 @@
   <li>
   <div id="pact_szbp11">
     <span class="title">
-      Parallel Logical Cryptanalysis of the Generator A5/1 in BNB-Grid System.
+      Parallel logical cryptanalysis of the generator A5/1 in BNB-grid system.
     </span>
     <span class="author">
       Alexander Semenov,
