--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <h2>Contact</h2>
   <ul>
-    <li><span class="email">zaikin.icc</span></li>
+    <li>zaikin.icc _at_ gmail.com</li>
     <li><a class="page-link" href="https://scholar.google.com/citations?user=pE3Rl5EAAAAJ&hl=ru">Google Scholar</a>
     <li><a class="page-link" href="https://dblp.org/pid/01/3435-2.html">DBLP</a>
     <li><a class="page-link" href="https://www.scopus.com/authid/detail.uri?authorId=56786079600">Scopus</a>
