Updated CV and publications.

--- a/publications/index.html
+++ b/publications/index.html
@@ -44,13 +44,37 @@
 
   <h2 align="left">Key SAT-related publications</h2>
 
+  <h3 class="year">2024</h3>
+  <ol class="bibliography">
+
+  <li>
+  <div id="z_cp24">
+    <span class="title">
+      Inverting step-reduced SHA-1 and MD5 by parameterized SAT solvers.
+    </span>
+    <span class="author">
+      Oleg Zaikin.
+    </span>
+    <span class="periodical">
+      <i>
+        CP 2024
+      </i>
+    </span>
+    <span class="links">
+      [<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CP.2024.31" target="_blank">HTML</a>]
+      [<a href="https://olegzaikin.github.io/publications/2024-z-cp-preprint.pdf" target="_blank">PDF</a>]
+    </span>
+  </div>
+  </li>
+</ol>
+
   <h3 class="year">2022</h3>
   <ol class="bibliography">
 
   <li>
   <div id="z_ijcai22">
     <span class="title">
-      Inverting 43-step MD4 via cube-and-conquer.
+      Inverting 43-step MD4 via Cube-and-Conquer.
     </span>
     <span class="author">
       Oleg Zaikin.
