News on JAIR paper.

--- a/index.html
+++ b/index.html
@@ -64,12 +64,16 @@
   <h2>News</h2>
   <table>
     <tr>
+      <td width="150", valign="top">13 September 2024</th>
+      <td valign="top">My paper <em>“Inverting Cryptographic Hash Functions via Cube-and-Conquer”</em> is accepted to Journal of Artificial Intelligence Research!</td>
+    </tr>
+    <tr>
       <td width="150", valign="top">20 June 2024</th>
-      <td valign="top">My paper <em>“Inverting Step-reduced SHA-1 and MD5 by Parameterized SAT Solvers”</em> is accepted at <a href="https://cp2024.a4cp.org/index.html"><strong>CP 2024</strong></a>!</td>
+      <td valign="top">My paper <em>“Inverting Step-reduced SHA-1 and MD5 by Parameterized SAT Solvers”</em> is accepted to <a href="https://cp2024.a4cp.org/index.html"><strong>CP 2024</strong></a>!</td>
     </tr>
     <tr>
       <td width="150", valign="top">20 April 2022</th>
-      <td valign="top">My paper <em>“Inverting 43-step MD4 via cube-and-conquer”</em> is accepted at <a href="https://ijcai-22.org/"><strong>IJCAI-ECAI 2022</strong></a>!</td>
+      <td valign="top">My paper <em>“Inverting 43-step MD4 via cube-and-conquer”</em> is accepted to <a href="https://ijcai-22.org/"><strong>IJCAI-ECAI 2022</strong></a>!</td>
     </tr>
   </table> 
 
