Added JAIR article.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <table>
     <tr>
       <td width="150", valign="top">13 September 2024</th>
-      <td valign="top">My paper <em>“Inverting Cryptographic Hash Functions via Cube-and-Conquer”</em> is accepted to Journal of Artificial Intelligence Research!</td>
+      <td valign="top">My paper <em>“Inverting Cryptographic Hash Functions via Cube-and-Conquer”</em> is accepted to <a href="https://www.jair.org/index.php/jair/article/view/15244"><strong>Journal of Artificial Intelligence Research</strong></a>!</td>
     </tr>
     <tr>
       <td width="150", valign="top">20 June 2024</th>
