--- a/publications/index.html
+++ b/publications/index.html
@@ -48,6 +48,26 @@
   <ol class="bibliography">
 
   <li>
+    <div id="z_jair24">
+      <span class="title">
+        Inverting Cryptographic Hash Functions via Cube-and-Conque.
+      </span>
+      <span class="author">
+        Oleg Zaikin.
+      </span>
+      <span class="periodical">
+        <i>
+          JAIR
+        </i>
+      </span>
+      <span class="links">
+        [<a href="https://www.jair.org/index.php/jair/article/view/15244" target="_blank">HTML</a>]
+        [<a href="https://olegzaikin.github.io/publications/2024-z-jair-preprint.pdf" target="_blank">PDF</a>]
+      </span>
+    </div>
+  </li>
+
+  <li>
   <div id="z_cp24">
     <span class="title">
       Inverting step-reduced SHA-1 and MD5 by parameterized SAT solvers.
