News on accepted AAAI'2026 paper.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
   <h2>News</h2>
   <table>
     <tr>
+      <td width="150", valign="top">8 November 2025</th>
+      <td valign="top">My paper <em>“Using Constraint Solvers to Construct Binary Codes with Good Error Correction Performance”</em> is accepted to the <a href="https://aaai.org/conference/aaai/aaai-26/"><strong>AAAI-26</strong></a>Main Technical Track !</td>
+    </tr>
+    <tr>
       <td width="150", valign="top">13 September 2024</th>
       <td valign="top">My paper <em>“Inverting Cryptographic Hash Functions via Cube-and-Conquer”</em> is accepted to <a href="https://www.jair.org/index.php/jair/article/view/15244"><strong>Journal of Artificial Intelligence Research</strong></a>!</td>
     </tr>
