On a paper accepted to JIS.

--- a/index.html
+++ b/index.html
@@ -64,16 +64,20 @@
   <h2>News</h2>
   <table>
     <tr>
+      <td width="150", valign="top">1 December 2025</th>
+      <td valign="top">My paper <em>“Enumerating extended self-orthogonal diagonal Latin squares of order up to 10”</em> co-authored with <a href="https://evatutin.narod.ru/">Eduard Vatutin</a> and <a href="https://www.curtisbright.com/">Curtis Bright</a> is accepted to <a href="https://cs.uwaterloo.ca/journals/JIS/"><strong>Journal of Integer Sequences</strong></a>!</td>
+    </tr>
+    <tr>
       <td width="150", valign="top">8 November 2025</th>
-      <td valign="top">My paper <em>“Using Constraint Solvers to Construct Binary Codes with Good Error Correction Performance”</em> is accepted to the <a href="https://aaai.org/conference/aaai/aaai-26/"><strong>AAAI-26</strong></a>Main Technical Track !</td>
+      <td valign="top">My paper <em>“Using constraint solvers to construct binary codes with good error correction performance”</em> co-authored with Stepan Kochemazov, Grigorii Trofimiuk, and Alexander Semenov is accepted to <a href="https://aaai.org/conference/aaai/aaai-26/"><strong>AAAI-26</strong></a>!</td>
     </tr>
     <tr>
       <td width="150", valign="top">13 September 2024</th>
-      <td valign="top">My paper <em>“Inverting Cryptographic Hash Functions via Cube-and-Conquer”</em> is accepted to <a href="https://www.jair.org/index.php/jair/article/view/15244"><strong>Journal of Artificial Intelligence Research</strong></a>!</td>
+      <td valign="top">My paper <em>“Inverting cryptographic hash functions via Cube-and-Conquer”</em> is accepted to <a href="https://www.jair.org/index.php/jair/article/view/15244"><strong>Journal of Artificial Intelligence Research</strong></a>!</td>
     </tr>
     <tr>
       <td width="150", valign="top">20 June 2024</th>
-      <td valign="top">My paper <em>“Inverting Step-reduced SHA-1 and MD5 by Parameterized SAT Solvers”</em> is accepted to <a href="https://cp2024.a4cp.org/index.html"><strong>CP 2024</strong></a>!</td>
+      <td valign="top">My paper <em>“Inverting step-reduced SHA-1 and MD5 by parameterized SAT solvers”</em> is accepted to <a href="https://cp2024.a4cp.org/index.html"><strong>CP 2024</strong></a>!</td>
     </tr>
     <tr>
       <td width="150", valign="top">20 April 2022</th>
