Added the JIS 2025 paper.

--- a/publications/index.html
+++ b/publications/index.html
@@ -44,13 +44,35 @@
 
   <h2 align="left">Key SAT-related publications</h2>
 
-  <h3 class="year">2024</h3>
+  <h3 class="year">2025</h3>
   <ol class="bibliography">
-
   <li>
     <div id="z_jair24">
       <span class="title">
-        Inverting Cryptographic Hash Functions via Cube-and-Conque.
+        Enumerating extended self-orthogonal diagonal Latin squares of order up to 10.
+      </span>
+      <span class="author">
+        Eduard Vatutin, Oleg Zaikin, and Curtis Bright.
+      </span>
+      <span class="periodical">
+        <i>
+          Journal of Integer Sequences
+        </i>
+      </span>
+      <span class="links">
+        [<a href="https://cs.uwaterloo.ca/journals/JIS/VOL28/Zaikin/zaikin4.html" target="_blank">HTML</a>]
+        [<a href="https://olegzaikin.github.io/publications/2025-zvb-jis-preprint.pdf" target="_blank">PDF</a>]
+      </span>
+    </div>
+  </li>
+</ol>
+
+  <h3 class="year">2024</h3>
+  <ol class="bibliography">
+  <li>
+    <div id="z_jair24">
+      <span class="title">
+        Inverting cryptographic hash functions via Cube-and-Conquer.
       </span>
       <span class="author">
         Oleg Zaikin.
@@ -66,7 +88,6 @@
       </span>
     </div>
   </li>
-
   <li>
   <div id="z_cp24">
     <span class="title">
@@ -90,7 +111,6 @@
 
   <h3 class="year">2022</h3>
   <ol class="bibliography">
-
   <li>
   <div id="z_ijcai22">
     <span class="title">
@@ -112,10 +132,8 @@
   </li>
 </ol>
 
-
   <h3 class="year">2021</h3>
   <ol class="bibliography">
-    
   <li>
   <div id="2021-kz-sat-preprint">
     <span class="title">
@@ -136,7 +154,6 @@
     </span>
   </div>
   </li>
-  
   <li>
   <div id="szk_chapter21">
     <span class="title">
@@ -160,10 +177,8 @@
   </li>
 </ol>
 
-
 <h3 class="year">2020</h3>
 <ol class="bibliography">
-
   <li>
   <div id="zims-ecai20">
     <span class="title">
@@ -185,7 +200,6 @@
     </span>
   </div>
   </li>
-
   <li>
   <div id="kzsk-ecai20">
     <span class="title">
@@ -208,7 +222,6 @@
     </span>
   </div>
   </li>
-
   <li>
   <div id="sogzk-lmcs20">
     <span class="title">
@@ -234,10 +247,8 @@
   </li>
 </ol>
 
-
 <h3 class="year">2019</h3>
 <ol class="bibliography">
-
   <li>
   <div id="zk-oms19">
     <span class="title">
@@ -260,10 +271,8 @@
   </li>
 </ol>
 
-
 <h3 class="year">2018</h3>
 <ol class="bibliography">
-
   <li>
   <div id="szoki-aaai18">
     <span class="title">On cryptographic attacks using backdoors for SAT.</span>
@@ -285,7 +294,6 @@
     </span>
   </div>
   </li>
-
   <li>
   <div id="kz-sat18">
     <span class="title">
@@ -310,7 +318,6 @@
 
 <h3 class="year">2017</h3>
 <ol class="bibliography">
-
   <li>
   <div id="zk_isc17">
     <span class="title">
@@ -336,7 +343,6 @@
 
 <h3 class="year">2016</h3>
 <ol class="bibliography">
-
   <li>
   <div id="sz_s+16">
     <span class="title">
@@ -357,7 +363,6 @@
     </span>
   </div>
   </li>
-
   <li>
   <div id="sz_s+16">
     <span class="title">
@@ -386,7 +391,6 @@
 
 <h3 class="year">2015</h3>
 <ol class="bibliography">
-
   <li>
   <div id="sz_pact15">
     <span class="title">
@@ -409,10 +413,8 @@
   </li>
 </ol>
 
-
 <h3 class="year">2012</h3>
 <ol class="bibliography">
-
   <li>
   <div id="psz_cs12">
     <span class="title">
@@ -438,7 +440,6 @@
 
 <h3 class="year">2011</h3>
 <ol class="bibliography">
-
   <li>
   <div id="pact_szbp11">
     <span class="title">
