On a paper accepted to Constraints.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
   <h2>News</h2>
   <table>
     <tr>
+      <td width="150", valign="top">16 December 2025</th>
+      <td valign="top">My paper <em>“Preimage attacks on round-reduced MD5, SHA-1, and SHA-256 using parameterized SAT solver”</em> is accepted to <a href="https://link.springer.com/journal/10601"><strong>Constraints</strong></a>!</td>
+    </tr>
+    <tr>
       <td width="150", valign="top">1 December 2025</th>
       <td valign="top">My paper <em>“Enumerating extended self-orthogonal diagonal Latin squares of order up to 10”</em> co-authored with <a href="https://evatutin.narod.ru/">Eduard Vatutin</a> and <a href="https://www.curtisbright.com/">Curtis Bright</a> is accepted to <a href="https://cs.uwaterloo.ca/journals/JIS/"><strong>Journal of Integer Sequences</strong></a>!</td>
     </tr>
@@ -78,10 +82,6 @@
     <tr>
       <td width="150", valign="top">20 June 2024</th>
       <td valign="top">My paper <em>“Inverting step-reduced SHA-1 and MD5 by parameterized SAT solvers”</em> is accepted to <a href="https://cp2024.a4cp.org/index.html"><strong>CP 2024</strong></a>!</td>
-    </tr>
-    <tr>
-      <td width="150", valign="top">20 April 2022</th>
-      <td valign="top">My paper <em>“Inverting 43-step MD4 via cube-and-conquer”</em> is accepted to <a href="https://ijcai-22.org/"><strong>IJCAI-ECAI 2022</strong></a>!</td>
     </tr>
   </table> 
 
